Creating user endpoints: GET/users - POST/users - GET/users/{user_id} - PATCH/users/{user_id} - DELETE/users/{user_id}
