# src/routes/index.js
@@ -1,12 +1,10 @@
 import express from 'express';
 import pingRoutes from './ping.routes.js';
+import userRoutes from './users.routes.js';
 
 const router = express.Router();
 
 router.use('/v1/ping', pingRoutes);
-
-// Aquí se pueden agregar más rutas en el futuro
-// router.use('/users', userRoutes);
-// router.use('/products', productRoutes);
+router.use('/v1/users', userRoutes);
 
 export default router;
